# pydantic-tornado

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yaml  objects.inv  pyproject.toml
.github/workflows/: publish.yml  test.yml
adr/: index.html
adr/0001-record-architecture-decisions/: index.html
adr/0002-generate-documentation-using-mkdocs/: index.html
adr/0003-type-annotations/: index.html
doc/: index.md  todo.md
doc/adr/: 0001-record-architecture-decisions.md  0002-generate-documentation-using-mkdocs.md  0003-type-annotations.md  index.md
doc/reference/: api.md  index.md
doc/users-guide/: examples.md  injections.md  writing-handlers.md
reference/: index.html
reference/api/: index.html
search/: search_index.json
src/pydantictornado/: __init__.py  errors.py  metadata.py  openapi.py  request_handling.py  routing.py  util.py
tests/: __init__.py  test_openapi.py  test_request_handling.py  test_routing.py  test_util.py
todo/: index.html
users-guide/examples/: index.html
users-guide/injections/: index.html
users-guide/writing-handlers/: index.html
